@@ -1,6 +1,7 @@
 1.20.3 /
 [Alexandr Topilski]
 - LZ4/Snappy/Bzip2 views
+- JSON.DEL command UI handling
 
 1.20.2 / November 3, 2018
 [Alexandr Topilski]
