@@ -1,6 +1,7 @@
 1.21.3 /
 [Alexandr Topilski]
 - LZ4/Snappy/Bzip2 views
+- [Redis] JSON.DEL command UI handling
 
 1.21.2 / November 3, 2018
 [Alexandr Topilski]
